--- a/gb/ncid282_9.md
+++ b/gb/ncid282_9.md
@@ -1,4 +1,11 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/26/n11682524.md#1" target="_blank">为中共做间谍 美籍华人导游认罪</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/26/n11682524.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1178182676-150x120.jpg" align ="left"></a>2019年9月底，前加利福尼亚旅行社华人总裁彭学华（Xuehua Edward Peng）被美国联邦检察官指控为中共安全部门从事间谍活动。周一（11月25日）他对指控表示认罪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11680494.md#1" target="_blank">汪峰晒照为大女儿庆生 章子怡直呼继女为宝贝</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11680494.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/VCG111175203321_meitu_1-150x120.jpg" align ="left"></a>大陆女星章子怡与歌手汪峰结婚后，育有三岁的女儿“醒醒”，上月，她在东京电影节上宣布怀二胎喜讯。11月25日，汪峰在微博晒照为与前妻所生的大女儿庆生，并寄语14岁的“熙熙”能“像子怡妈妈那样无畏又美丽”。章子怡在送祝福时也不禁直呼：“生日快乐，熙熙宝贝！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 7:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11680256.md#1" target="_blank">江苏南通“优质工程”小区新房现满墙裂缝</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11680256.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15da7de01b468ad3_ttl7dayxg5_VCG111260893154-150x120.jpg" align ="left"></a>江苏南通一小区的200多户业主买的精装修新房，出现了屋顶裂开、满墙裂缝、漏水等大大小小十几个质量问题。而开发商却称这是“普遍存在的质量问题”，并以“过保修期”为由一直不予维修。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 4:10 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/22/n11673100.md#1" target="_blank">《烈火战车》影评：奥林匹克中的信仰之光</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/22/n11673100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/COF-20-1200x800-150x120.jpg" align ="left"></a>故事背景是在第一次世界大战之后，像其它讲述历史重要时期的作品一样，这部影片也经受了时间的考验，即便现在观看，也不觉得过时。而且，《烈火战车》如雷轰顶般地提醒着我们什么是生命中重要的东西。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 11:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11678915.md#1" target="_blank">王立强的间谍老板 向心及龚青离台时被约谈</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11678915.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1bb7b1fc92f949c620fb1c740b178c11-150x120.jpg" align ="left"></a>香港上市公司“中国创新投资(01217.HK)”执行董事、主席兼行政总裁向心和替任董事龚青，因被投诚澳洲的中共特工王立强指为中共从事间谍活动，被调查局桃园市调查处发出通知书，要求就新闻报道事宜配合调查，两人已聘请台湾律师提供协助。
+
+自称是中共特工的王立强，10月向澳洲反间谍机关投诚，澳洲媒体23日刊出其访谈。王立强说，他以中央军事委员会联合参谋部创建的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/22/n11675079.md#1" target="_blank">胡歌谈粉丝：不能接受花钱多就优秀的观念</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/22/n11675079.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1903270615401487-150x120.jpg" align ="left"></a>日前，大陆男星胡歌因今年曾入围戛纳电影节主竞赛单元的唯一华语片《南方车站的聚会》（以下简称《南方》）接受采访。对于主演电视剧十多年之后才真正主演首部电影，胡歌坦言，尽管自己非常担心不如之前演电视剧的表现，但还是决定要尝试一下，“哪怕输了也值得”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 3:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/23/n11675404.md#1" target="_blank">举牌声援香港屡遭攻击 祝圣武：终结中共</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/23/n11675404.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/10FotoJet-1-150x120.jpg" align ="left"></a>香港的反送中运动影响世界，深入人心。温哥华大陆律师祝圣武一个多月来，一直在当地商业中心举牌支持香港，多次遭特务骚扰。近日，他向大纪元记者记述了自己站出来抗议中共的心得。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 1:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/22/n11674519.md#1" target="_blank">中国出生人口两年断崖式下跌 经济续衰退</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/22/n11674519.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/4f1eb50ab827ca4fc63c97322f4e7ec5-150x120.jpg" align ="left"></a>中共结束一胎化政策后，年轻人却在沉重经济压力下不愿多生小孩，出生率反下跌，官方2018年的出生率是历史新低。有民间机构估算，2019年出生人口将再创1949年来最低。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 1:38 AM							</td></tr>
@@ -12,10 +19,8 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/18/n11663019.md#1" target="_blank">澳媒调查：中共贿赂开道 缓慢入侵澳洲近邻</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/18/n11663019.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/65065b7ccb88f5b0a477d111a8adad09-150x120.jpg" align ="left"></a>澳洲九号电视台近日对中共在澳洲后院——太平洋岛国的扩张和贿赂行为进行了调查。一位前美国海军太平洋舰队情报长官表示，中共对该地区有很大兴趣是因为这里是美国、澳洲和新西兰之间的交通要道。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 5:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/18/n11664497.md#1" target="_blank">广东女子上午查出怀孕下午就被炒 提起诉讼</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/18/n11664497.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d89ed0f6c5e18e_ttl7dayTxn_VCG111221733448-150x120.jpg" align ="left"></a>广东珠海一女子检查出怀孕后，当天就被公司炒了鱿鱼。女子自然流产后，提起诉讼。近日，该事件有了结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 5:05 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/18/n11663391.md#1" target="_blank">鼠疫疫情遭封 医师：中共处理方式让人害怕</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/18/n11663391.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/mastomys-491576-150x120.jpg" align ="left"></a>据中国大陆官方资料，截至目前中国已有3例鼠疫确诊病例，但因为中国内部严格封锁疫情资讯，也让邻近国家格外紧张。对此，医师蔡依橙就在脸书发文表示，网络时代鼠疫控制容易做到，不过中国却由于政府爱面子，且必须维持表面鼠疫的和谐，选择让相关的新闻与讯息消失，鼠疫并不令人害怕，中国政府的处理才是真正令人害怕的原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 2:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/18/n11664213.md#1" target="_blank">“加水就能跑”的杭州青年汽车宣告破产</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/18/n11664213.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG11441882805-150x120.jpg" align ="left"></a>因“水氢发动机”而出名的杭州青年汽车集团有限公司于近日宣布破产。青年汽车曾被指“骗取政府补贴”，就在上个月，获得了1.18亿元的财政补贴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 1:58 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/18/n11663869.md#1" target="_blank">韩国瑜质疑台独 赖清德：其实你不懂我们的心</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/18/n11663869.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/412967-150x120.jpg" align ="left"></a>高雄市长韩国瑜今（18）日质疑赖清德的台独立场，赖清德回应“其实你不懂我们的心”今天晚间并在脸书回应，台湾已经是个主权独立的国家，名字叫中华民国，与中国互不隶属，执政后不必另外宣布台湾独立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:13 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/17/n11661439.md#1" target="_blank">坐飞机偶遇汤唯 网友晒照引发热议</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/17/n11661439.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/07/1-362-150x120.jpg" align ="left"></a>16日，有网友在微博晒出机场偶遇汤唯的照片。照片中，乘坐经济舱的汤唯，在登机前与普通乘客一样，除了站在那里排队安检，还独自一人提行李，可能因为行李太多太重，以至于汗水都沁透了衣服，网友不禁大赞她“活得非常真实”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:24 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/17/n11661453.md#1" target="_blank">中国最大掩埋场提前25年填满 焚垃圾毁生态</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/17/n11661453.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG11496599839-150x120.jpg" align ="left"></a>陕西省西安市的全国最大垃圾掩埋场原设计要撑到2044年，但由于每天1万吨垃圾的涌入，已提前25年被塞满。现大举兴建焚化炉， 但垃圾焚烧会断送中国生态的未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 2:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/26/n11680835.md#1" target="_blank">每日三退声明精选（2019/11/25）</a><br></h3>我目前在维州念书，之前在中国读大学的时候为了个人上进，并没有太多的了解中共的本质，随大流入了党。但是出国之后接触到了国外的信息之后慢慢思想有些变化。很多时候觉得国内的教育很有问题，让人变的没有逻辑性，不会去自主思考前因后果做出自己的判断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 9:45 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11678984.md#1" target="_blank">妈妈辅导女儿功课发脾气 外公23年前早料到</a><br></h3>“不写作业母慈子孝，一写作业鸡飞狗跳”，这是大陆许多辅导孩子功课的家长真实的写照。近日，上海一位妈妈被不认真做功课的女儿气到抓狂，连连咆哮，没想到却乐坏了她的老父亲和老母亲。原来23年前，她的父亲给她辅导功课时就是这样，当时他甚至还气愤的写下了一封家书。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11678963.md#1" target="_blank">6厘米钻头打穿新房楼板 开封女屋主被吓呆</a><br></h3>装修新房本是高兴的事，可河南开封市尉氏县居民郑女士在装地板时却被自己的新房吓了一跳。近日，她反映，交房时她发现其中一卧室楼板中间部分凹陷，且房间地面有多处明显裂痕；在铺装木地板打地板龙骨时，楼板竟被6厘米的钻头打穿。开发商对此声称，这并不影响居住，若要退房，郑女士须还清按揭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11678880.md#1" target="_blank">南昌初一学生校服收费2300元 家长难接受</a><br></h3>近日，江西南昌县的舒先生反映，孩子在该县豫章师院附属学校读初一，学校要求家长交钱统一买校服，费用实在太高，令家长难以接受。据了解，该校订购的校服共13件，费用总计2300元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11678229.md#1" target="_blank">每日三退声明精选（2019/11/24）</a><br></h3>我几乎天天看大纪元、新唐人，使我更加看清了共产党的邪恶本质，并在力所能及条件下，揭露中共，弘扬自由、民主、法治的普世价值观，为中国民族的觉醒和未来，奋笔疾书，尽量感染身边的每一个人，家人、亲戚、朋友、同学，特别是今年以来的中美贸易战和香港民众反送中运动，为中国的未来，尽自己一份绵薄之力。在此，我庄严声明，退出中国共产党党籍，永不反悔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:14 AM							</td></tr>
@@ -37,8 +42,5 @@
 退团退队，不被恶党绑架。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 10:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11665863.md#1" target="_blank">疑长期受欺凌 上海14岁中学生喝农药身亡</a><br></h3>11月14日，在上海南翔中学借读的14岁河南籍学生卢诗杰喝农药自杀，次日身亡。据他的同学透露，卢诗杰长期被同学欺凌，甚至于他的每一个家人都被欺凌者起了绰号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 4:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11665161.md#1" target="_blank">每日三退声明精选（2019/11/18）</a><br></h3>中共恶党窃国七十年，对十四亿中国人的谎言洗脑，对各种宗教信仰的残酷迫害有目共睹。最近在全世界众目睽睽下，又对香港人暴力残杀，还撒着弥天大谎。中共邪教不解体，老百姓没有好日子过。摆脱中共、消灭中共是中华儿女的责任。中共是全人类的万恶之源。是地地道道的政教合一的邪教！天灭中共！恢复中华民族敬天信神传统！做中华儿女！不做马列子孙。我们声明退出中共邪教的一切组织，决.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 11:36 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/18/n11662461.md#1" target="_blank">每日三退声明精选（2019/11/17）</a><br></h3>力挺香港同胞，大陆人民不全部都是唯利是图的人，很多很多都是有良知的，很多人民都是支持香港同胞争取自由民主的，关于国内媒体的新闻跟下面的评论，都是官方水军的，媒体新闻跟评论根本就不让发表任何反对声音，我们只有在心里默默支持，请外界同胞不要相信大陆的媒体宣传跟评论，大陆千千万万人跟你们站在一起，只是发表不出来，我们爱这个国家，爱这个民族，只是不爱这个邪党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/17/n11661177.md#1" target="_blank">每日三退声明精选（2019/11/16）</a><br></h3>曾留学多年返回国内，有比较才知道透明的西方是充满人性的社会，而国内一切都是暗黑，在一党独裁专制下遍地腐败，道德全面堕落，根源就是这个党。现有身边明白人指点翻墙，特此声明，退出被拉入的所谓共青团和曾加入的所谓少先队。做中华儿女，不做马列子孙。天佑平安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 9:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/17/n11660831.md#1" target="_blank">前男友用不雅照威胁 福州女大学生遭吞药自杀</a><br></h3>“我马上把你的不雅照放学校论坛！”“明天我就去调查你爸妈，给叔叔阿姨惊喜！”10月17日，在福建福州外语外贸学院读大四的小静（化名 ）收到前男友发来的威胁信息。28日，小静吞下200颗药片自杀，被发现时她全身抽搐、口吐白沫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 2:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282_10.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/ncid282_9.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282_9.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/ncid282_9.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_9.htm">http://www.epochtimes.com/gb/ncid282_9.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
