--- a/gb/news392_8.md
+++ b/gb/news392_8.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11730097.md#1" target="_blank">王友群：中共越打压台湾 挺台湾的人越多</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11730097.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/3d47b0bc52fe192529f5ae486f548241-150x120.jpg" align ="left"></a>2019年即将结束。这一年，处于内外交困、四面楚歌、全面危机中的中共，与普世价值背道而驰，在全面剥夺中国大陆人的“信仰自由、言论自由、免于恐惧的自由、免于匮乏的自由”的同时，不断加大打压台湾人的力度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:00 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11730010.md#1" target="_blank">吕锡民：在5G未来演进中的AI</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11730010.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1131489187-150x120.jpg" align ="left"></a>随着5G新空中介面（New Radio, NR）规范第一版（Rel-15）的完成，下一步重点研究应该会转向无线行动通讯的发展。与前几代产品类似，NR预计在未来十年内逐步展开，从引入创新技术组件到进一步增强功能，并且扩大5G无线接取范围。从更长远角度来看，我们预期将会有全新的“超越5G”无线接取技术出现。重新塑造与定义未.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:34 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/06/110629062200100383-150x120.jpg" align ="left"></a>1927年4月12日，国民党军队在上海逐步解除了上海工人纠察队的武装，同时逮捕、处决了一些中共党员。在广州，国民党也展开了清洗。大批中共党员和激进份子被捕，三百多人被处死。这是国民党“清党”第一期中的标志性事件，史学界一般称之为“四一二事件”，而中共则称其为“四一二反革命政变”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 5:58 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729270.md#1" target="_blank">【名家专栏】破除“间谍门”阴谋的三步曲</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729270.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Epoch_Times9A6A9246-1200x800-150x120.jpg" align ="left"></a>在过了一年半之后，美国司法部监察长迈克尔?E?霍洛维茨（Michael e. Horowitz）在上周一（12月9日）对外发布了他的最终报告。此前，霍洛维茨一直在审查关于联邦调查局（FBI）在2016年美国总统大选期间监视川普（特朗普）总统当时的竞选活动的严肃问题。周三（12月11日），他来到国会并讨论了这份报告。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:52 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729772.md#1" target="_blank">文武：宁要动荡中的觉醒 也不要稳定中的愚昧</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729772.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1150179857-600x400-1-150x120.jpg" align ="left"></a>中共一直在高调的强调稳定，说什么稳定压倒一切，前几天中共召开高规格的经济工作会议，说了一大堆，其实就是围绕着一个字“稳”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 2:32 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729547.md#1" target="_blank">李天笑：莱特希泽点出美中协议的奥秘和意义</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729547.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1150582660-600x400-1-150x120.jpg" align ="left"></a>美中第一阶段协议达成后，川普及其团队对它评价极高。公平地说，只有掌握美中谈判背后内幕和真实了解美中争议要点的人，才能对谈判协议做出客观评价。川普及其团队也许是真正有资格能客观地对美中协议进行评论的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:58 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729358.md#1" target="_blank">横河：中共谍战背后的思维</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-138076011-600x400-1-1-150x120.jpg" align ="left"></a>主持人：我们前一段讨论的王立强投诚的案件，它的蝴蝶效应还在持续，中共虽然一直在诋毁王立强的可信度，但是西方媒体是继续放出了更多王立强的爆料，而且顺着这条线索挖出的猛料也是越来越多。中共情报部门长期以来不为人知的神秘面目也逐渐的暴露出来了，我们今天就来讨论一下这个案件的最新进展，以及中共所特有的情报思维。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 11:02 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11729109.md#1" target="_blank">宋善：构陷与迫害</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11729109.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-3-600x400-150x120.png" align ="left"></a>明慧网近日报导，湖南省湘潭市法轮功学员郭明清出于好心，对中学生说了几句话，劝他们退出共青团、少先队，就被警察非法抓捕、构陷，遭非法判刑一年半。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:11 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728843.md#1" target="_blank">周晓辉：习近平再会林郑 不变与变透困境</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728843.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1189006322-600x400-1-150x120.jpg" align ="left"></a>据中共官媒报导，12月16日，习近平在中南海瀛台会见了来京述职的香港特别行政区行政长官林郑月娥，听取了她对香港当前形势和特别行政区政府工作情况的汇报。根据报导，习近平对外传递了三层意思：
+
+一、“充分肯定”林郑在过去一年中的工作以及显示出的“勇气和担当”，特别点出的是其“采取一系列政策措施扶助企业、纾缓民困，认真研.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 4:42 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728706.md#1" target="_blank">李靖宇：高以翔骤逝 曝大陆演艺圈“权力游戏”</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728706.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191126232934100707-600x400-150x120.jpg" align ="left"></a>当红台湾艺人高以翔11月27日拍摄浙江卫视《追我吧》节目时骤逝，12月16日举行告别式，年仅35岁，令人唏嘘不已。他录制《追我吧》17个小时后晕倒，送到医院急救时瞳孔已放大到边缘，完全错过黄金救援时间。尽管医院全力抢救了两个小时，但最后宣布高“突发心源性猝死”，噩耗令各界震惊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11727077.md#1" target="_blank">王友群：我为中美贸易协议点个“赞”</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11727077.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1126143684-600x400-2-150x120.jpg" align ="left"></a>12月13日，中美贸易第一阶段协议，总算达成了。
 
 目前，对这个协议，众说纷纭，莫衷一是。大多不太看好。我却认为，中美达成这个协议好，好在哪里？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 10:47 AM			</td></tr>
@@ -6,20 +18,49 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726663.md#1" target="_blank">周晓辉：高调关注中共盗版仿制 俄补刀不简单</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726663.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1506052148492039-600x400-150x120.jpg" align ="left"></a>中共的所作所为，连曾经在诸多问题上支持其的俄罗斯也看不下去了，中共联俄制美的算盘恐难以实现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726670.md#1" target="_blank">张林：抵抗共产暴政，香港人赢了第一回合</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726670.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1911270654462188-600x400-150x120.jpg" align ="left"></a>为期半年的激烈抗争，香港抗争者无疑已经击败中南海，赢了第一回合。尽管这不是终局，香港自由之路还很漫长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:58 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726640.md#1" target="_blank">张菁： 由中共开“世界律师大会”想到的</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726640.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/c700ac8e244d0376578408ea8552d6db-600x400-150x120.jpg" align ="left"></a>大是大非面前，唯有运用智慧，多听真相，独立思考，从善如流，尽快退出中共，才能避免灾难，给自己和家人一个看得到的光明未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:55 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726592.md#1" target="_blank">颜丹：李子柒的田园为何那么吸引人？</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/liziqi-150x120.png" align ="left"></a>人们行色匆匆，追求繁华；但慕然回首才发现，返璞归真的生活才是心之所往。从这个角度来说，李子柒的成功就在于，她比我们早一步发现了自己的心之所往。李子柒的田园，正是我们一直在寻找的田园。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:49 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725873.md#1" target="_blank">陈思敏：中共祭出利多撑澳门的背后</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725873.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/32019-06-111.03-150x120.jpg" align ="left"></a>在澳门回归20周年前夕，中共官媒开足马力盛赞澳门是“一国两制”模范，这也加深了外界疑虑：“听话的澳门将取代不听话的香港”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:01 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725671.md#1" target="_blank">海风：中共政权即将崩溃的十大预兆</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725671.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1504210527312039-600x400-150x120.jpg" align ="left"></a>—个政权在崩溃前就像一个久病将亡的病人，它必将会出现死亡前的各种预兆。历史学家曾经总结了历代王朝在灭亡前将会普遍出现的十大征兆：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 10:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726127.md#1" target="_blank">李靖宇：从台湾网红波特王遭中共打压谈起</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726127.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/maxresdefault-600x400-1-150x120.jpg" align ="left"></a>Youtuber网红波特王与台湾总统蔡英文合作拍片，影片创下高流量；不料中国合作方“徐州自由自在网路科技公司”要求影片不能出现“总统”字眼，......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726045.md#1" target="_blank">程晓农：十二个字读懂美中经贸谈判</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726045.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/15c9f8864d19e1f7_ttl7day1IM_05-150x120.jpg" align ="left"></a>我用十二个字来解读美中经贸谈判：对川普来说，不打是打，不罚是罚；对中共来说，赢就是输。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725616.md#1" target="_blank">程晓容：澳洲政民觉醒 合力抵制中共渗透</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/0Y1A5520-1-150x120.jpg" align ="left"></a>维州州长安德鲁斯越过联邦政府、擅自和中共签约。澳洲政民自发动员，正告亲共官员和中共：不许出卖维州的利益。与狼共舞的结局如何，邓森便是前车之鉴。而中共已成众矢之的，再难掩盖其邪恶居心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:32 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725021.md#1" target="_blank">洪微：美军测试中程导弹震慑中共</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725021.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190818-D-ZZ999-221-600x400-150x120.jpg" align ="left"></a>12月12日，美军在加利福尼亚州的范登堡空军基地，测试了一种常规配置的陆基（地面发射）弹道导弹。这是美国8月份退出《中导条约》后，第二次测试中程导弹，也是首枚弹道导弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 12:59 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11724859.md#1" target="_blank">谢田：中南海何苦悄悄的投石问路</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11724859.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1079499936-150x120.jpg" align ="left"></a>美国宾夕法尼亚大学国际关系和中国历史学教授、中国问题专家林蔚博士（Arthur Waldron）披露，一名与习近平关系密切的高层幕僚透露，中共内部已经清楚的知道：“我们已经走投无路。”这是英文《大纪元》记者杨杰凯（Jan Jekielek）在“美国思想领袖”节目的专访中，林蔚给出的讯息，他认为中共非常清楚自身已死到临头.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:52 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11724853.md#1" target="_blank">夏祷：愿荣光归台湾（上）</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11724853.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1483017840901-1-600x400-150x120.jpg" align ="left"></a>去年双十清晨，台湾总统府后出现了完美的双彩虹。一个月后，阳明山上再度出现了双彩虹，长达九小时。这一道双彩虹已进入金氏世界纪录。据说，彩虹是上帝誓约的记号。在《创世纪》中，大洪水后，上帝指着天上的彩云对诺亚立下了誓约。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:46 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/15/n11724618.md#1" target="_blank">【名家专栏】弹劾川普决议条款“苍白无力”</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/15/n11724618.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1187544966-webcrop-700x420-150x120.jpg" align ="left"></a>我认识的一个记者看到众议院的弹劾决议条款草案后，称之为“苍白而无力”， 我觉得这是一个很好的评价。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:56 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/15/n11723672.md#1" target="_blank">程晓容：林郑进京述职 中南海如何收拾残局</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/15/n11723672.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912080230442188-1-150x120.jpg" align ="left"></a>当百万民众怒吼，国际社会同声援港时，中南海若再对林郑表示坚决支持，还要重复洗脑谎言、续演恐怖，那真是自判死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 4:48 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/14/n11723179.md#1" target="_blank">袁斌：10万元医疗费何以成了不能承受之重？</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/14/n11723179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-2-1-600x400-2-150x120.gif" align ="left"></a>一个患病的中年男子，因为付不起10万元医疗费而出走离世，你信吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:29 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729906.md#1" target="_blank">云鹤天：中共的心态</a><br></h3>旷日持久贸易战
+
+协议到底签不签
+
+签与不签都是死
+
+需要精打与细算
+
+如果不签今天死
+
+要是签了明天完
+
+那就还是签了吧
+
+能活一天是一天......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 2:48 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729881.md#1" target="_blank">陈达：习近平夸林郑月娥“恪尽职守”感言</a><br></h3>中共魁首见特首，
+
+恪尽职守口特臭。
+
+民心失尽还挂匾，
+
+几近光杆夸风流。
+
+或是无可奈何应，
+
+或是同命相怜酬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 2:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11729699.md#1" target="_blank">理悟：天开眼</a><br></h3>宇宙更新天体明
+众神聚焦察民情
+凭空云启开天眼
+港民抗暴惊天庭
+驱除共党合天意
+还我香港民心凝
+正义自有苍天助
+共匪横行看报应......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:35 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/6/n11706337.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（9）</a><br></h3>一般把推理看作是“使用理智从某些前提产生结论”的行动。按照亚氏逻辑学的观点，前提和结论都是用判断或命题，推理是把判断或命题按照理智的方式连接起来。判断或命题是把词或概念用一些词（如关系词“BE”）连接起来。理智在亚氏逻辑学中，一般理解为符合理性行为公理，如不循环（传递性）、不矛盾（一致性）等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 10:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11727270.md#1" target="_blank">夏祷：愿荣光归台湾（下）?</a><br></h3>2014年，台湾、香港先后发生了太阳花运动和占中运动。学生们攻入立法院，坐上了议场主席台，在国父孙中山先生画像下高悬占领立法院的天数。太阳花学运最终促使台湾搁置了两岸服贸协议，延缓了中共企图通过贸易对台湾的深层渗透。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11727243.md#1" target="_blank">洪微：英超球星也遭中共封杀</a><br></h3>美国NBA被中共封杀的事件，余音还在，欧洲又起波澜，著名足球明星梅苏特·厄齐尔（Mesut ?zil）也遭到中共封杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:52 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11726592.md#1" target="_blank">颜丹：李子柒的田园为何那么吸引人？</a><br></h3>人们行色匆匆，追求繁华；但慕然回首才发现，返璞归真的生活才是心之所往。从这个角度来说，李子柒的成功就在于，她比我们早一步发现了自己的心之所往。李子柒的田园，正是我们一直在寻找的田园。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:49 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725968.md#1" target="_blank">夏小强：美中第一阶段贸易协议得失谈</a><br></h3>此次美中达成的第一阶段贸易协议，总体上是中共妥协退让的成分占多，从结果来讲，美方的得大于失。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 8:05 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725845.md#1" target="_blank">吕锡民：服务业与城市化——全球宏观经济转型</a><br></h3>就像人类成长一样，跟随着年龄的增加，生活结构也会产生变化，国家经济亦是如此，不是一昧追求GDP成长并随之起舞。换句话说，如同人类四肢长大，身上衣服穿着应会产生变化，类似台湾的开发中国家，如果整体经济想要进入欧美先进国家的高收入境界，势必以既合乎历史潮流，又合乎人类文明规律前进，不断实施宏观经济结构调整，从农业进展到工业.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725813.md#1" target="_blank">郑纯清：厦门地铁塌陷吟</a><br></h3>红朝验收半月间，
@@ -28,46 +69,5 @@
 豆渣馅破烂泥滩。
 华夏山寨大门毁，
 地基清理复兴前。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725637.md#1" target="_blank">袁斌：段子里的中国乱象入木三分</a><br></h3>一部手机丢失了，一群相好惊呆了：不是心疼，是心慌。一个贪官进去了，一帮朋友傻眼了：不是为他，是为己。一个领导艾滋了，一堆妇女乱套了：不是咋治，是咋办？一个情人翻脸了，一批干部想自杀：不是想死，是怕抓！一个老人摔倒了，一个国家纠结了：不是不扶，是不敢。一个校长被捕了，一批校长显形了：不是无能，是无德。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725621.md#1" target="_blank">云鹤天：世人明真相</a><br></h3>法轮功女学员
-向世人讲真相
-一名过路男子
-掏出手机照像
-学员穿羽绒服
-帽子罩在头上
-男子肆无忌惮
-靠近学员脸庞
-学员严辞喝止......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:57 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725609.md#1" target="_blank">祝君安：中美贸易谈判随感</a><br></h3>不情不愿，半推半就
-敬酒不吃，罚酒噎喉
-灰犀牛顶，黑天鹅愁
-全面脱钩，严冬寒透
-忍痛改革，官民双收
-情系苍生，神佛保佑
-抱残守缺，身败名丢
-天堂地狱，二者孰优......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:47 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11724960.md#1" target="_blank">东方觉：克拉玛依火灾与泰坦尼克号水难</a><br></h3>12月8日，是新疆克拉玛依市友谊馆火灾25周年祭日。
-
-每当我想起新疆克拉玛依火灾时，“泰坦尼克”号水难也同在脑中浮现。两种场面，水与火的交织，挥之不去。在灾难面前，人性与兽性经纬分明，令人悲哀，令人感叹，令人内心难以平静……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 12:35 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/15/n11723365.md#1" target="_blank">吐为快：末朝即景</a><br></h3>红梦党谎任媒陈，妖控饭碗谁当真
-会议宣读席上酒，头上顶戴戏中人
-箱箱赂贿为仕程，件件加倍往回挣
-下级拥捧上级稳，纪委原是半眼睁......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 10:19 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/15/n11723337.md#1" target="_blank">陈达：《时代》二零一九年度人物评选感言</a><br></h3>二零一九人物选，
-港众得票遥领先。
-风头盖过中共头，
-再唤良知向明天。
-不料杂志社老板，
-戏弄读者逗你玩。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 10:09 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/14/n11723228.md#1" target="_blank">海网：正告张晓明们</a><br></h3>张晓明，明嚣张。捅大漏，暗恐慌。
-怕问责，胡妄想。罪掩罪，再乱港。
-卄三条，复摇晃。吹死灰，梦火旺。
-徒贻笑，逗大方。无神眼，超级盲。
-似不信，天灭党。党就会，永不亡。
-天理公，天网洪。恶必有，恶报应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:45 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/14/n11723056.md#1" target="_blank">云鹤天：退党</a><br></h3>有位女教授
-随夫要出国
-因为是党员
-出境通不过......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:01 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/news392_7.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;8&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/news392_9.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/news392_8.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/news392_8.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/news392_8.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_8.htm">http://www.epochtimes.com/gb/news392_8.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
