--- a/gb/ncid2420_9.md
+++ b/gb/ncid2420_9.md
@@ -6,6 +6,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/3/18/n8937932.md#1" target="_blank">网文：中国高房价正成为“跨代贫穷”推手</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/3/18/n8937932.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/05/1005062313562039-150x120.jpg" align ="left"></a>大陆房价近来在一些重点城市，甚至一线城市周边的三四线城市又开始火热起来。面对房价不断上涨，有分析人士从房价上涨的根源以及房价上涨对经济以及对民众生活造成的负面影响进行了分析。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年03月18日 2:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/3/10/n8893667.md#1" target="_blank">网文：2017年2月北京楼市已经癫狂</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/3/10/n8893667.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/03/1310130940331459-150x120.jpg" align ="left"></a>日前，一篇详述北京2月份真实成交房价的文章在网络流传，文章列举了海淀、东城、西城这些市内热门区域以及昌平、大兴等离市中心稍远区域房屋的成交价格后，感叹永远不要企图去预测房价的顶部在哪里。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年03月10日 10:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/1/25/n8742966.md#1" target="_blank">中共严控VPN 专家：“翻墙”禁不住</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/1/25/n8742966.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/01/1-107-150x120.jpg" align ="left"></a>中共对互联网的管制再次升级。日前，主管网络通讯的工信部发布管理通知，明令不得自行建立和租用常用于“翻墙”（突破网络封锁）的虚拟私人网络（VPN）。这个规定令中国网民开始担心日后无法“翻墙”上facebook等海外网站，国内外企业业务也恐受冲击。不过有网络专家指，新措施主要针对国内VPN服务供应商，民众仍可透过海外“翻墙”软件接触海外真实信息，或令这些翻墙方式.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年01月25日 12:58 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/5/5/n9110793.md#1" target="_blank">中共“假外媒”制造新闻 出口转内销内幕</a><br></h3>中共在海外办分支媒体或控制当地的海外媒体充当“外媒”，再经由国内党媒“出口转内销”、舆情大军“添油加醋”后，欺骗国内民众这是外媒观点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年05月08日 11:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/4/25/n9074993.md#1" target="_blank">最新时政段子集：《人民的名义》过政审内幕</a><br></h3>最新时政段子集：《人民的名义》政审内幕......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年04月26日 6:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/4/22/n9064114.md#1" target="_blank">【网文】中共打压股市楼市的背后用意</a><br></h3>近来，大陆股市受打压连续4天下跌，中共各地方当局又不断推出严厉的楼市限购措施。大陆经济学家马光远认为，这些调控措施有把楼市一下打死的风险。有大陆业界人士日前分析了中共之所以这么做的背后原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年04月22日 9:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/4/11/n9028047.md#1" target="_blank">时政段子集：穷人何苦为难穷人</a><br></h3>时政段子集：穷人何苦为难穷人 80后真心不容易......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年04月12日 5:43 AM							</td></tr>
@@ -60,10 +61,5 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/1/20/n8728592.md#1" target="_blank">最新时政段子集：枪声已起 硝烟不远</a><br></h3>【枪声已起】直到攀枝花国土局长枪击市委书记后，我才开始明白中共当局为什么要严厉打击汽枪打气球的路边摊了，主要是怕中共官员上那儿练枪法啊。攀枝花打响2017年第一枪。枪声已起，硝烟不远！
 
 【中共不装了】民主阵营应该感谢周强，他的一番话让多少对中共抱有幻想的人绝望，比多少人权民运工作的启蒙都快。中共不装了，情况就简单了。就怕他们装，然后永远有所谓的理性思考.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年01月21日 3:55 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/17/1/6/n8675873.md#1" target="_blank">湖南益华小区居民不堪当地政府面子工程向外媒投诉</a><br></h3>我是大陆湖南省益阳市赫山区益华小区的居民，有爆料提供。
-
-我们小区以前本是国有企业，职工一辈子辛辛苦苦工作，然而90年代政府无视百姓民生将所有职工强制“一次性买断”，逃避所有退休补偿。从此职工只能自谋生路，辛苦谋生，居住在老房子里节俭度日。
-
-然而现在，百姓连这样的日子都无法维持了：前段时间政府大搞面子工程“棚户区改造”（把外墙涂抹一层涂料，就叫做棚.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年01月07日 2:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_10.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/ncid2420_9.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420_9.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/ncid2420_9.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid2420_9.htm">http://www.epochtimes.com/gb/ncid2420_9.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
