--- a/gb/ncid278_8.md
+++ b/gb/ncid278_8.md
@@ -25,7 +25,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/1/n11693428.md#1" target="_blank">大陆律师亲历反送中：望通过香港改变大陆</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/1/n11693428.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/lawyer-600x400-1-150x120.jpg" align ="left"></a>《香港人权与民主法案》的生效，给经历了将近半年艰难抗争的香港民众极大鼓舞。12月1日中午，大批市民齐集中环遮打花园，参加由“香港自治行动”举办的“感谢美国保护香港大游行”，表达港人对美国的感谢和誓言抗争到底的决心，同时吁请国际社会支持。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 6:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/1/n11693738.md#1" target="_blank">获奖片揭孔子学院内幕 德议员建议在国会放映</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/1/n11693738.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/HN8A0575-150x120.jpg" align ="left"></a>《假孔子之名》的德国巡回由人权协会西藏倡议组织（Tibet Initiative Deutschland）与“为了受迫害族群”协会（Gesellschaft für bedrohte V?lker）联合举办，到12月13日在德国12个城市共上演13场。该片由加拿大华裔导演秋旻（Doris Liu）执导，通过汉语教师赵琪的经历引出了加拿大关闭一所孔子学院的故事.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 5:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/1/n11692249.md#1" target="_blank">华裔女博士亲身经历 识破中共谎言</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/1/n11692249.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20160423130409_53426-150x120.jpg" align ="left"></a>乔伊（Joy）是一位华裔教育学女博士，定居在澳洲已经很多年了，目前在一所大学里从事教育研究工作。每当她向周围的人谈到她对待法轮大法（法轮功）的态度由最初的恐惧到现在的坚信不移时，都会让很多人（特别是很多华人）忍不住好奇并且重新思考关于法轮功的话题。下面我们就来看看这位华裔女博士是如何转变无神论观念，识破中共谎言，通过修炼法轮功而身心受益的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 3:01 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/1/n11693611.md#1" target="_blank">毋忘初心大游行 港警抹黑民众后 改新闻稿</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/1/n11693611.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010051242188-150x120.jpg" align ="left"></a>12月1日下午，香港民众参加“毋忘初心大游行”，表达“五大诉求 缺一不可”的核心诉求。 活动开始期间，警方称“数百名暴徒投掷多枚烟雾饼”，在被踢爆夸大情事后，港警又修改新闻稿。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:06 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/4/n11700166.md#1" target="_blank">79岁法轮功学员韩俊毅 遭国保抄家绑架</a><br></h3>云南昆明市79岁的法轮功学员韩俊毅老太太在11月24日上午出门后，家里的法轮功书籍都被当地“610”和国保抢劫走。她到派出所询问时却被当场绑架。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/4/n11699071.md#1" target="_blank">美众院通过维吾尔人权法 迪里夏提：带来希望</a><br></h3>美国众议院在周二 (3 日) 晚间以，407 比 1 的票数压倒性通过“维吾尔人权政策法案”。该法案被视为继《香港人权与民主法案》之后，美国国会对中共的又一次重击。中共不出意外地再次“坚决反对”，并扬言要报复。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/2/n11695972.md#1" target="_blank">送辩护词遭枉判3年 辽宁孔繁校冤狱期满回家</a><br></h3>辽宁省抚顺市法轮功学员孔繁校，仅仅因给立案单位送辩护词就被非法判刑3年，羁押到辽宁省本溪监狱服刑，11月17日，3年冤狱期满才回到家中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/2/n11695376.md#1" target="_blank">法轮功学员董月孝含冤离世 姜世胜遭冤判3年</a><br></h3>山东诸城市法轮功学员姜世胜、王平升、董月孝于8月1日被青岛市黄岛区法院非法庭审。董月孝当时血压相当高，被家人搀扶进庭，庭审数日后昏迷不醒，被送医院抢救无效，于9月7日含冤去世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:13 AM							</td></tr>
