--- a/gb/nf3046_7.md
+++ b/gb/nf3046_7.md
@@ -2,7 +2,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/4/21/n11201702.md#1" target="_blank">退党中心主席易蓉：习应弃中共 还自由于民</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/4/21/n11201702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/190420195044100651-150x120.jpg" align ="left"></a>今天在法拉盛举办盛大游行集会，纪念万名法轮功学员4.25中南海和平上访20 周年；呼吁彻底解体中共，立即结束迫害。同时我们在此庆贺3亿多中华儿女退出中共党团队这一伟大历史壮举。庆贺3亿多勇士摆脱中共邪恶枷锁，重获自由与新生！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月25日 7:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/15a04587ab8bdae5_ttl7daywWE_20190518-513NY-Dorit_Dinur-150x120.jpg" align ="left"></a>5月18日，来自以色列的Dorit Dinur和同伴一起在纽约曼哈顿炮台公园炼功洪法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月20日 12:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/5/19/n11267378.md#1" target="_blank">大陆游客支持佩服法轮功 三退景点故事多</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/5/19/n11267378.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/ed625b88b2d15c68a5046ac9fd1d605cba7bff11-1-150x120.jpg" align ="left"></a>2019年5月16日至18日，逾万名来自世界各地的部分法轮功学员汇集在纽约，举行心得交流会、大型游行和排字等活动。本报记者采访了几位在美国景点担任退党义工的法轮功学员，她们表示，越来越多的大陆游客表态支持法轮功，并说中共气数已尽，纷纷三退与中共脱离关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月20日 5:58 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/5/17/n11263703.md#1" target="_blank">三退三亿三千万 劝退义工心声：快退党保命</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/5/17/n11263703.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/20190516-Edward-Dye-074-150x120.jpg" align ="left"></a>在5月16日的纽约市曼哈顿第42街上，法轮功庆祝第20届世界法轮大法日的游行队伍延绵数英里，一眼望不到头。在游行的第三个主题方阵走来时，一个蓝底金字的“全球退党服务中心”的巨大立幅告诉人们一个重大天象：已经有3亿3千万中国人宣布退出了共产党的党团队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月17日 10:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/6/16/n11324951.md#1" target="_blank">每日三退声明精选（2019/06/15）</a><br></h3>在当今中国，不知道做错了什么，就会被关进洗脑班，关进去的大都是好人，要我对这个共产党失望，决心坚决退出一切有关的关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月16日 9:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/6/15/n11323582.md#1" target="_blank">每日三退声明精选（2019/06/14）</a><br></h3>我长期受中共暴政迫害，在中国没有任何人权。中共不灭，中国和中国人就会毁灭。因此，我声明退出中共恶党的一切附属组织共青团、少先队等，做一个堂堂正正站着的中国人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月15日 10:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/6/14/n11321190.md#1" target="_blank">每日三退声明精选（2019/06/13）</a><br></h3>我是一名是体制内的人，受中国共产党洗脑教育多年，也没有感觉到中国共产党领导统治下的中国有什么不好。直到看见法轮功团体传播的真相资料，才开启了我对宗教信仰和历史真相的探究，方才觉醒。共产党消灭了中国人的精神，抹黑历史并毁灭证据，每一个善良正直的中国人都应该站出来反对它、唾弃它。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月14日 9:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/6/13/n11318831.md#1" target="_blank">每日三退声明精选（2019/06/12）</a><br></h3>共产党要解体了，这是预料之中的，也是天意，百万香港人民上街抗议，给大陆民众开个好头儿，我们今天退出共产党的组织，声援香港同胞，向他们致敬！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月13日 11:21 AM							</td></tr>
