--- a/gb/nf4386_2.md
+++ b/gb/nf4386_2.md
@@ -32,12 +32,6 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/7/11/n11379412.md#1" target="_blank">宗教自由会议在即 美大使：升至行动层级</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/7/11/n11379412.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1-26-150x120.jpg" align ="left"></a>7月12日，美国国际宗教自由大使布朗巴克（Sam Brownback）在电话新闻会上表示，美国国务院下周举行的推进宗教自由部长级会议，需升至行动层级，集合全球的力量，对迫害宗教自由的国家施压和采取行动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月12日 7:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/7/10/n11376727.md#1" target="_blank">参与迫害法轮功 中共驻瑞典大使被举报到美国</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/7/10/n11376727.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/2019-7-10-sweden-almedalen-falun-gong-truth_01-ss-150x120.jpg" align ="left"></a>七月初是瑞典一年一度的政治周（Almedalen），也叫民主周，今年活动期间，当地法轮功协会公布了伦敦独立人民法庭有关中共强摘器官的裁定，受到瑞典政要和媒体的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月11日 8:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/7/10/n11376814.md#1" target="_blank">瑞典民主周?中共阻碍法轮功学员讲真相失败</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/7/10/n11376814.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/2019-7-10-sweden-almedalen-falun-gong-truth_06-ss-150x120.jpg" align ="left"></a>7月初，瑞典民主政治周活动期间，法轮功学员揭露中共迫害真相受到当地政界和媒介关注，期间中共企图搞破坏，最终以失败告终。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月11日 7:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/7/5/n11367520.md#1" target="_blank">响彻在世界政坛的正义之声（中）</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/7/5/n11367520.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/190621222928100699-150x120.jpg" align ="left"></a>
-美国国务院年度报告连续20年关注法轮功
-（大纪元记者李辰综合报导）于长新，大陆空军第一代试飞员、国家二等功臣、空军指挥学院高级教官、副军级、著名教授，他的名字被列入美国国务院年度宗教自由报告，作为美国重点关注的受迫害对象。
-
-
-
-迫害一开始，江泽民曾下令军人和共产党员不准修炼法轮功。由于于长新是高级将领，江泽民亲自过问于长新的情况，要求他不再修.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月10日 12:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/8/16/n11458257.md#1" target="_blank">明州众议院多数党领袖敦促释放孙兰英</a><br></h3>2019年8月6日，现住在美国明尼苏达州的法轮功学员孙兰英的女儿，收到州众议院多数党领袖瑞恩·温克勒（Ryan Winkler）致给河北省邯郸市政府的信件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月16日 11:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/nf4386.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf4386.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf4386_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf4386_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf4386_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf4386_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf4386_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf4386_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf4386_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf4386_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf4386_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/nf4386_2.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/nf4386_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/nf4386_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf4386_2.htm">http://www.epochtimes.com/gb/nf4386_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
